--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
